--- a/src/app/pages/indrident/swiperdemo1-page/swiperdemo1-page.component.html
+++ b/src/app/pages/indrident/swiperdemo1-page/swiperdemo1-page.component.html
@@ -6,7 +6,7 @@
     [navigation]="false"
     [breakpoints]="breakpoints"
     [pagination]="{ clickable: true }"
-    class="swiper"
+    class="swiper-baas"
   >
     <ng-template swiperSlide *ngFor="let d of data;">
       <div class="baas-swiper-container">
