--- a/src/app/pages/indrident/overwrite-page/overwrite-page.component.scss
+++ b/src/app/pages/indrident/overwrite-page/overwrite-page.component.scss
@@ -16,8 +16,8 @@
 
   .p-carousel-indicators .p-carousel-indicator button {
     background-color: #e9ecef;
-    width: 1rem;
-    height: 1rem;
+    width: 0.5rem;
+    height: 0.5rem;
     transition: background-color 0.2s, color 0.2s, box-shadow 0.2s;
     border-radius: 50%;
   }
@@ -25,9 +25,9 @@
   .p-carousel-indicators {
     position: fixed;
     left: 0;
-    bottom: 7rem;
+    bottom: 0;
+    height: 5rem;
     width: 100%;
-    //background-color: red;
     color: white;
     text-align: center;
   }
